--- a/client/app/dashboard/dashboard.component.html
+++ b/client/app/dashboard/dashboard.component.html
@@ -1,9 +1,24 @@
 <h1>Dashboard</h1>
-<input type=text [(ngModel)]="request.text" (keypress)="onKeyPressed($event)" placeholder="Search..." />
+<input type=text [(ngModel)]="request.term" (keypress)="onKeyPressed($event)" placeholder="Search..." />
 <button (click)="startSearch()">Search</button>
 <div *ngIf="searchResponse">
   <label>{{searchResponse.totalElements}} results:</label>
-  <div *ngFor="#entry of searchResponse.entries">
-      <div>{{entry.title}}</div>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <td>Title</td>
+        <td>Preview</td>
+        <td>Tags</td>
+        <td>Date</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="#entry of searchResponse.entries" (click)="openEntry(entry.id)">
+          <td>{{entry.title}}</td>
+          <td>{{entry.content}}</td>
+          <td>{{entry.tags}}</td>
+          <td>{{entry.createdDate | date:'dd.MM.yyyy hh:mm:ss'}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
