--- a/client/styles.css
+++ b/client/styles.css
@@ -1,5 +1,15 @@
-h2 { color: #444; font-weight: lighter; }
-body { margin: 2em; }
-body, input[text], button { color: #888; font-family: Cambria, Georgia; }
-button { padding: 0.2em; font-size: 14px}
-* { font-family: Arial; }
+body {
+  margin: 5px;
+}
+body, input[text], button {
+  color: grey;
+}
+
+button {
+  padding: 1px;
+  font-size: 15px
+}
+
+* {
+  font-family: Arial;
+}
