Everything working except image deletion.

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,6 +1,5 @@
-<b>Dream-Diary</b>
-<nav>
-  <a [routerLink]="['Dashboard']">Dashboard</a>
-  <a [routerLink]="['Editor']">Editor</a>
-</nav>
+<div id="navigation">
+	<a [routerLink]="['Dashboard']">Dashboard</a>
+	<a [routerLink]="['Editor']">New entry</a>
+</div>
 <router-outlet></router-outlet>
