--- a/client/app/editor/image-item-list-entry.component.css
+++ b/client/app/editor/image-item-list-entry.component.css
@@ -4,6 +4,7 @@
 	float: left;
 	margin-top: 5px;
 	margin-right: 5px;
+	height: 125px;
 }
 
 .thumbnailImage {
@@ -21,4 +22,8 @@
 
 .closeButton:hover {
 	color: #2a98ff;
+}
+
+.fileUploader {
+	border: none;
 }
