--- a/client/app/dashboard/dashboard.component.html
+++ b/client/app/dashboard/dashboard.component.html
@@ -5,13 +5,13 @@
 </div>
 <div *ngIf="searchResponse" id="searchResultWrapper">
   <label id="totalElements">{{searchResponse.totalElements}} results:</label>
-  <table width="700px" cellspacing="0" cellpadding="0">
+  <table cellspacing="0" cellpadding="0">
     <colgroup>
-      <col width="100px">
-      <col width="250px">
-      <col width="100px">
-      <col width="200px">
-      <col width="100px">
+      <col width="25%">
+      <col width="20%">
+      <col width="20%">
+      <col width="20%">
+      <col width="10%">
     </colgroup>
     <thead>
       <tr id="header">
