--- a/server/src/main/resources/templates/fragments/navigation.html
+++ b/server/src/main/resources/templates/fragments/navigation.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/standardhead :: standardhead"></head>
 
 <body>
-	<nav th:fragment="navigation">
+	<nav th:fragment="navigation" class="dd-navigation">
 		<a th:href="@{/dashboard}">Dashboard</a>
 		<a th:href="@{/entry}">Add new entry</a>
 	</nav>
