--- a/server/src/main/resources/static/css/dd-pagination.css
+++ b/server/src/main/resources/static/css/dd-pagination.css
@@ -1,10 +1,6 @@
-.dd-pagination-button {
-	border: 0 none;
-	background: transparent;
-	padding: 0;
-	margin: 0;
-}
-
 .pagination a {
 	cursor: pointer;
+	border: 1px solid #1c66ab !IMPORTANT;
+	color: #1c66ab !IMPORTANT;
+	border-radius: 0 !IMPORTANT;
 }
