--- a/server/src/main/resources/templates/fragments/navigation.html
+++ b/server/src/main/resources/templates/fragments/navigation.html
@@ -5,6 +5,7 @@
 <body>
 	<nav th:fragment="navigation" class="dd-navigation">
 		<a th:href="@{/dashboard}">Dashboard</a>
+		<a th:href="@{/tag-search}">Tags</a>
 		<a th:href="@{/entry}">Add new entry</a>
 	</nav>
 </body>
